<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/greeting"
        android:textColor="@color/black"
        android:fontFamily="@font/circularb_medium"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/acquaintance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/circularb_medium"
        android:text="@string/acquaintance"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="328dp"
        android:layout_height="58dp"
        android:layout_marginTop="55dp"
        android:hint="@string/placeholder_name"
        app:counterMaxLength="15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acquaintance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="15"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/switch_accept"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/circularb_regular"
        android:text="@string/accept"
        android:textSize="16sp"
        android:thumb="@drawable/thumb"
        android:track="@drawable/track"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="272dp"
        android:layout_height="60dp"
        android:layout_marginBottom="122dp"
        android:backgroundTint="@color/btn_continue_color"
        android:fontFamily="@font/circularb_bold"
        android:includeFontPadding="true"
        android:text="@string/btn_continue"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColorHighlight="#D51B1B"
        android:textSize="24sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#6E2525"
        app:strokeColor="@color/btn_continue_stroke_color"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>