<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/choose_btn_backcolor_default"
    tools:context=".choosegenres">

    <TextView
        android:id="@+id/personName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/circularb_medium"
        android:textColor="@color/black"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/chooseUpTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/circularb_medium"
        android:gravity="center_vertical"
        android:lineSpacingExtra="-5sp"
        android:text="@string/choose_3_genres"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/personName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toTopOf="@+id/button21"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseUpTo"
        app:layout_constraintVertical_bias="0.212">

        <Button
            android:id="@+id/btn_choose_80"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/choose_btn_backcolor_default"
            android:fontFamily="@font/circularb_bold"
            android:text="@string/choose_btn_80"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            app:cornerRadius="47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_choose_2000"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btn_choose_2000"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/choose_btn_backcolor_default"
            android:fontFamily="@font/circularb_bold"
            android:text="@string/choose_btn_2000"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            app:cornerRadius="47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hbtn_choose_hiphop"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/hbtn_choose_hiphop"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/choose_btn_backcolor_default"
            android:drawableLeft="@drawable/hiphopicon"
            android:fontFamily="@font/circularb_bold"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/choose_btn_HIPHOP"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            app:cornerRadius="47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_choose_punk"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btn_choose_punk"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/choose_btn_backcolor_default"
            android:drawableLeft="@drawable/punkicon"
            android:fontFamily="@font/circularb_bold"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:text="@string/choose_btn_PUNK"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            app:cornerRadius="47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_choose_pop"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btn_choose_pop"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/choose_btn_backcolor_default"
            android:drawableLeft="@drawable/popicon"
            android:fontFamily="@font/circularb_bold"
            android:paddingLeft="38dp"
            android:paddingRight="38dp"
            android:text="@string/choose_btn_POP"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            app:cornerRadius="47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btn_choose_90"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/choose_btn_backcolor_default"
            android:fontFamily="@font/circularb_bold"
            android:text="@string/choose_btn_90"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            app:cornerRadius="47dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_choose_2010"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btn_choose_2010"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/choose_btn_backcolor_default"
            android:fontFamily="@font/circularb_bold"
            android:text="@string/choose_btn_2010"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            app:cornerRadius="47dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_choose_russian"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp" />

        <Button
            android:id="@+id/btn_choose_russian"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/choose_btn_backcolor_default"
            android:drawableLeft="@drawable/russianicon"
            android:fontFamily="@font/circularb_bold"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/choose_btn_RUSSIAN"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            app:cornerRadius="47dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_choose_indie"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btn_choose_indie"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/choose_btn_backcolor_default"
            android:drawableLeft="@drawable/indieicon"
            android:fontFamily="@font/circularb_bold"
            android:paddingLeft="33dp"
            android:paddingRight="33dp"
            android:text="@string/choose_btn_INDIE"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            app:cornerRadius="47dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_choose_rock"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btn_choose_rock"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/choose_btn_backcolor_default"
            android:drawableLeft="@drawable/rockicon"
            android:fontFamily="@font/circularb_bold"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            android:singleLine="true"
            android:text="@string/choose_btn_ROCK"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="22sp"
            app:cornerRadius="47dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            tools:ignore="RtlHardcoded" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button21"
        android:layout_width="272dp"
        android:layout_height="60dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="@color/btn_continue_color"
        android:fontFamily="@font/circularb_bold"
        android:text="@string/Lets_go"
        android:textSize="24sp"
        app:cornerRadius="14dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/btn_continue_stroke_color"
        app:strokeWidth="2dp" />
</androidx.constraintlayout.widget.ConstraintLayout>